# broken-dns-proxy

./: .gitignore  .travis.yml  ChangeLog  README.md  bdp.py  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
broken_dns_proxy/: __init__.py  __main__.py  application.py  arguments_parser.py  cli.py  cli_runner.py  client.py  config.py  config_common.py  exceptions.py  logger.py  modifier.py  proxy_server.py  settings.py
broken_dns_proxy/modifiers/: __init__.py  base_modifier.py  flags_modifier.py  modification_chain.py  modifier.py  modifiers.py
broken_dns_proxy/tests/: __init__.py  test_config.py
broken_dns_proxy/tests/test_modifiers/: test_basic.py
test/: __init__.py  test_config.py
test/test_modifiers/: __init__.py  test_basic.py
test/testing_files/: config_with_modifier
