[metadata]
name = broken-dns-proxy
author = Tomas Hozza
author-email = thozza@redhat.com
summary = Simple DNS proxy for simulating DNS issues
description-file = README.md
home-page = https://github.com/thozza/broken-dns-proxy
license = GPLv3+
version = 0.0.1
classifier =
        Development Status :: 5 - Alpha
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved ::  GNU General Public License v3 or later (GPLv3+)
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    simulating
    issues
    dns
    proxy

[files]
packages =
    broken_dns_proxy

[entry_points]
console_scripts =
    bdp = broken_dns_proxy.__main__:__main__
